--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="calculator">
       <div id="display"></div>
       <div id="keys"></div>
+      <div id="multipliers"></div>
     </div>
     <script type="text/javascript" src="scripts.js"></script>
   </body>
