Change name of number keys from keys to numbers.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div id="calculator">
       <div id="display"></div>
-      <div id="keys"></div>
-      <div id="multipliers"></div>
+      <div id="numbers"></div>
+      <div id="percentages"></div>
     </div>
     <script type="text/javascript" src="scripts.js"></script>
   </body>
